--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "serve ."
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "serve": "^14.2.1"
   }
 }
